--- a/cms-project-app/package.json
+++ b/cms-project-app/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-paper": "^5.2.0",
     "react-navigation-drawer": "^2.7.2"
   },
   "devDependencies": {
