--- a/cms-project-app/package.json
+++ b/cms-project-app/package.json
@@ -9,17 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.4",
-    "@react-navigation/native-stack": "^6.9.10",
-    "expo": "~47.0.12",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
+    "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "react": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.2.0",
-    "react-navigation-drawer": "^2.7.2"
+    "react-native-reanimated": "~2.14.4",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
