--- a/cms-project-web/package.json
+++ b/cms-project-web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "^2.1.3",
+    "react-table": "^7.8.0",
     "web-vitals": "^3.1.0"
   },
   "scripts": {
