--- a/cms-project-app/package.json
+++ b/cms-project-app/package.json
@@ -22,6 +22,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
