--- a/cms-project-app/app.json
+++ b/cms-project-app/app.json
@@ -25,10 +25,18 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
       },
-      "permissions": ["WRITE_EXTERNAL_STORAGE"]
+      "permissions": [
+        "WRITE_EXTERNAL_STORAGE"
+      ],
+      "package": "com.faizashrafkk.cmsprojectapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "1fdf8067-b97e-4f39-9527-f8d453983992"
+      }
     }
   }
 }
