--- a/cms-project-app/package.json
+++ b/cms-project-app/package.json
@@ -23,6 +23,8 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-svg": "13.4.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "3.5.0"
