--- a/cms-project-app/package.json
+++ b/cms-project-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-material/core": "^1.3.7",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.4",
     "@react-navigation/stack": "^6.3.16",
@@ -20,6 +21,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-calendar-picker": "^7.1.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.2.0",
     "react-native-reanimated": "~2.14.4",
